fix weird left overflow of output box

--- a/pkgdown/assets/webr.css
+++ b/pkgdown/assets/webr.css
@@ -59,7 +59,7 @@
 
 .webr-output {
   width: 100%;
-  margin-top: 0.75rem;
+  margin: 0.75rem 0 0 0;
   padding: 0.75rem;
   font-family: 'SFMono-Regular', Consolas, 'Liberation Mono', Menlo, monospace;
   font-size: 0.875rem;
